Prevent temporary scrollbar on Township

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,7 +1,7 @@
 /* If data attribute is applied, override Swal's styles to prevent layout shift */
 body[data-welcome-back] {
 	padding-right: 0 !important;
-	overflow: initial !important;
+	overflow-y: initial !important;
 }
 
 /*
